# game-engine-v0

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  common.hpp  components.cpp  controls.cpp  engine.cpp  objects.cpp  scene.cpp  textures.cpp
docs/: api.md  architecture.md
game/: imgui.ini  node.hpp  scene copy.scene  scene.scene  scene.toml
include/: common.hpp  components.hpp  controls.hpp  engine.hpp  objects.hpp  scene.hpp  textures.hpp
shaders/: shaders.cpp  shaders.hpp  uber.hpp
src/: main.cpp
src/engine/: gameview.cpp  gameview.hpp  gui.cpp  gui.hpp  object.cpp  object.hpp  project.cpp  project.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  shaders.cpp  shaders.hpp
src/engine/_deprecated/node/: node.hpp  node2d.hpp
src/engine/node/: node.cpp  node.hpp  node2d.cpp
src/engine/objects/: component.cpp  component.hpp  object.cpp  object.hpp
src/game/: bird.hpp
src/imgui/: imgui_impl_glfw.cpp
src/shaders/: uber.frag  uber.vert
